fix spacing

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -201,7 +201,7 @@ section {
   }
 
   h1 {
-    margin: 0px 0px 0px 0px;
+    margin: 0px 0px 15px 0px;
   }
 
   figure {
